--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -65,24 +65,7 @@ nav a:hover {
     width: 100%;
 }
 .example_1 {
-    color: #8ecae6;
-   
-}
-.example_2 {
-    color: #219ebc;
-   
-}
-.example_3 {
     color: #023047;
-    
-}
-.example_4 {
-    color: #ffbf1f;
-
-}
-.example_5 {
-    color: #fb8500;
-   
 }
 main h1, h2, h3, p {
     text-align: center;
